# AudioIntercom

./: .gitignore
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/intercom/: intercom.c  intercom.h
app/src/main/java/com/example/konga/: ApplicationIntercom.java  ApplicationTalkback.java  AudioIntercom.java  MainActivity.java  Talkback.java
app/src/main/java/com/github/hex636b/: ApplicationIntercom.java  AudioRecord.java  MainActivity.java
app/src/main/native/: intercom.c
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/talkback/: talkback.c  talkback.h
